add data persistence

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
   "description": "this is a test.",
   "version": "0",
   "manifest_version": 3,
-  "permissions": ["scripting"],
+  "permissions": ["scripting", "storage"],
   "action": {
     "default_popup": "./main.html"
   }
