--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "chrome-types": "^0.1.308",
+    "@types/chrome": "^0.0.280",
+    "@types/jquery": "^3.5.31",
     "copy-webpack-plugin": "^12.0.2",
     "ts-loader": "^9.5.1",
     "typescript": "^5.6.3",
-    "@types/jquery": "^3.5.31",
     "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4"
   },
