add timer as service worker, wiring not done yet though, also the keepalive hack for the service worker doesn't work yet

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,8 +3,11 @@
   "description": "this is a test.",
   "version": "0",
   "manifest_version": 3,
-  "permissions": ["scripting", "storage"],
+  "permissions": ["alarms", "offscreen", "scripting", "storage"],
   "action": {
     "default_popup": "./main.html"
+  },
+  "background": {
+    "service_worker": "timer.js"
   }
 }
