--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@types/chrome": "^0.0.280",
     "@types/jquery": "^3.5.31",
     "copy-webpack-plugin": "^12.0.2",
+    "eslint": "^9.16.0",
+    "globals": "^15.13.0",
     "ts-loader": "^9.5.1",
     "typescript": "^5.6.3",
+    "typescript-eslint": "^8.17.0",
     "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4"
   },
